<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Title of the tab-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:text="@string/soundboard"
        android:textStyle="bold"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <!--Show volume level-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".03"
        android:layout_gravity="center_horizontal"
        android:id="@+id/volume_textview"
        android:text="@string/volume"/>

    <!--Let's user adjust media volume on screen-->
    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".06"
        android:layout_margin="10dp"
        android:id="@+id/volume"/>

    <!--Buttons displayed in a table layout for formatting-->
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:padding="5dp">
        <TableRow
            android:layout_height="0dp"
            android:layout_width="fill_parent"
            android:layout_weight=".25">
            <Button
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@drawable/button"
                android:layout_margin="5dp"
                android:text="@string/airhorn"
                android:textSize="15sp"
                android:id="@+id/airhorn"/>
            <Button
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@drawable/button"
                android:layout_margin="5dp"
                android:text="@string/yay"
                android:textSize="15sp"
                android:id="@+id/yay"/>
            <Button
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@drawable/button"
                android:layout_margin="5dp"
                android:text="@string/knock"
                android:textSize="15sp"
                android:id="@+id/knock"/>
        </TableRow>

        <TableRow
            android:layout_height="0dp"
            android:layout_width="fill_parent"
            android:layout_weight=".25">
            <Button
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@drawable/button"
                android:layout_margin="5dp"
                android:text="@string/ding"
                android:textSize="15sp"
                android:id="@+id/ding"/>
            <Button
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@drawable/button"
                android:layout_margin="5dp"
                android:text="@string/buzzer"
                android:textSize="15sp"
                android:id="@+id/buzzer"/>
            <Button
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@drawable/button"
                android:layout_margin="5dp"
                android:text="@string/countdown"
                android:textSize="15sp"
                android:id="@+id/countdown"/>
        </TableRow>

        <TableRow
            android:layout_height="0dp"
            android:layout_width="fill_parent"
            android:layout_weight=".25">
            <Button
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@drawable/button"
                android:layout_margin="5dp"
                android:text="@string/phone1"
                android:textSize="15sp"
                android:id="@+id/phone1"/>
            <Button
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@drawable/button"
                android:layout_margin="5dp"
                android:text="@string/phone2"
                android:textSize="15sp"
                android:id="@+id/phone2"/>
            <Button
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@drawable/button"
                android:layout_margin="5dp"
                android:text="@string/doorbell"
                android:textSize="15sp"
                android:id="@+id/doorbell"/>
        </TableRow>

        <TableRow
            android:layout_height="0dp"
            android:layout_width="fill_parent"
            android:layout_weight=".25">
            <Button
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@drawable/button"
                android:layout_margin="5dp"
                android:text="@string/beat1"
                android:textSize="15sp"
                android:id="@+id/beat1"/>
            <Button
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@drawable/button"
                android:layout_margin="5dp"
                android:text="@string/beat2"
                android:textSize="15sp"
                android:id="@+id/beat2"/>
            <Button
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@drawable/button"
                android:layout_margin="5dp"
                android:text="@string/beat3"
                android:textSize="15sp"
                android:id="@+id/beat3"/>
        </TableRow>
    </TableLayout>
    
    <!--Gotta give Kendrick Lemke credit for providing free beats-->
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="#ffffff"
        android:text="@string/kendrick"/>
</LinearLayout>