<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="3dp"
    android:id="@+id/suggestionator">

    <!--Title of the tab-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:text="@string/suggestionator"
        android:textStyle="bold"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <!--TextView where the suggestion is returned-->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/suggestion"
        android:id="@+id/textView"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:background="@drawable/text_border"
        android:gravity="center" />

    <!--Buttons stored in a table layout-->
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".8">
        <TableRow   android:layout_height="0dp"
                    android:layout_weight=".25">
            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight=".25"
                android:text="@string/object"
                android:textSize="15sp"
                android:id="@+id/object"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@drawable/button"
                android:layout_margin="5dp"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight=".25"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:text="@string/relationship"
                android:textSize="15sp"
                android:id="@+id/relationship"
                android:background="@drawable/button"
                android:layout_margin="5dp"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight=".25"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:text="@string/location"
                android:textSize="15sp"
                android:id="@+id/location"
                android:background="@drawable/button"
                android:layout_margin="5dp"/>
        </TableRow>
        <TableRow   android:layout_height="0dp"
                    android:layout_weight=".25">
            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight=".25"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:text="@string/occupation"
                android:textSize="15sp"
                android:id="@+id/occupation"
                android:background="@drawable/button"
                android:layout_margin="5dp"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight=".25"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:text="@string/event"
                android:textSize="15sp"
                android:id="@+id/event"
                android:background="@drawable/button"
                android:layout_margin="5dp"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight=".25"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:text="@string/genre"
                android:textSize="15sp"
                android:id="@+id/genre"
                android:background="@drawable/button"
                android:layout_margin="5dp"/>
        </TableRow>
        <TableRow   android:layout_height="0dp"
                    android:layout_weight=".25">
            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight=".25"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:text="@string/person"
                android:textSize="15sp"
                android:id="@+id/person"
                android:background="@drawable/button"
                android:layout_margin="5dp"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight=".25"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:text="@string/emotion"
                android:textSize="15sp"
                android:id="@+id/emotion"
                android:background="@drawable/button"
                android:layout_margin="5dp"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight=".25"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:text="@string/oddball"
                android:textSize="15sp"
                android:id="@+id/oddball"
                android:background="@drawable/button"
                android:layout_margin="5dp"/>
        </TableRow>
    </TableLayout>
</LinearLayout>