<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Linear layout to hold the title and the help button at the top-->
    <!--This is the only fragment where the title isn't the only thing at the top-->
    <!--Therefore it is a little different than the other layouts-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:orientation="horizontal"
        android:gravity="center">

    <!--Title of the tab-->
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/halflife"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingLeft="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/howto_halflife"
        android:layout_gravity="center_vertical"
        android:background="@drawable/help"
        android:id="@+id/help"/>
    </LinearLayout>

    <!--TextView that displays the timer-->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".6"
        android:layout_margin="5dp"
        android:textColor="#ffffff"
        android:text="@string/sixty"
        android:textSize="150sp"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@drawable/text_border"
        android:ems="10"
        android:id="@+id/timer_editText" />

    <!--Buttons displayed in a table layout-->
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".4">
        <TableRow android:layout_height="0dp"
                android:layout_width="fill_parent"
                android:layout_weight=".5"
                android:layout_margin="5dp">
            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight=".5"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:background="@drawable/button"
                android:text="@string/start"
                android:id="@+id/start" />

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight=".5"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:background="@drawable/button"
                android:text="@string/half"
                android:id="@+id/half" />
        </TableRow>
        <TableRow android:layout_height="0dp"
                android:layout_width="fill_parent"
                android:layout_weight=".5"
                android:layout_margin="5dp">
            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:background="@drawable/button"
                android:text="@string/reset"
                android:id="@+id/reset" />
        </TableRow>
    </TableLayout>
</LinearLayout>